extras/statping/service.yml
---
  apiVersion: v1
  kind: Service
  metadata:
    name: statping
    labels:
      app: statping
  spec:
    selector:
      app: statping
    ports:
      - name: http
        port: 80
        targetPort: 8080
