extras/statping/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: statping
  annotations:
    kubernetes.io/tls-acme: "true"
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - statping.example.com
    secretName: statping-tls
  rules:
  - host: statping.example.com
    http:
      paths:
      - path: /
        backend:
          serviceName: statping
          servicePort: http
